--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.0"
   },
   "devDependencies": {
