--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react-facebook-login": "^4.0.1",
     "react-facebook-login-component": "^0.9.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "styled-components": "^3.2.6"
