--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
-    "mongoose": "^5.1.0"
+    "mongoose": "^5.1.0",
+    "node-fetch": "^2.1.2",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "eslint-config-google": "^0.9.1"
