--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.0-beta4",
