--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^8.2.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "eslint": "^4.19.1",
