--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,11 @@
   "dependencies": {
     "babel-eslint": "^8.2.3",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "mocha": "^5.1.1",
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.0",
     "node-fetch": "^2.1.2",
