--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,16 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "eslint": "^4.19.1",
+    "pace": "0.0.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-facebook-login": "^4.0.1",
     "react-facebook-login-component": "^0.9.2",
+    "react-loader": "^2.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-spinners": "^0.3.2",
     "react-swing": "^1.0.2",
     "redux": "^4.0.0",
     "styled-components": "^3.2.6",
