--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:4000",
   "dependencies": {
     "eslint": "^4.19.1",
+    "immutable": "^3.8.2",
     "pace": "0.0.4",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
