--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mongodb": "^3.1.0-beta4",
     "mongoose": "^5.1.0",
     "node-fetch": "^2.1.2",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "eslint-config-google": "^0.9.1"
