--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
+    "express-force-ssl": "^0.3.2",
     "geolib": "^2.0.24",
     "mocha": "^5.1.1",
     "mongodb": "^3.1.0-beta4",
