--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://10.65.105.124:80",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "eslint": "^4.19.1",
     "immutable": "^3.8.2",
