--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-smooth": "^1.0.0",
     "react-spinners": "^0.3.2",
     "react-swing": "^1.0.2",
     "redux": "^4.0.0",
